Fix readability of content
Increase line-height on body

--- a/styles.css
+++ b/styles.css
@@ -43,6 +43,7 @@ body {
 	font-size: var(--fs-content-medium);
 	margin: 0;
 	color: var(--clr-font-primary);
+	line-height: 1.5;
 }
 
 *,
